[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch="main", features = ["dynamic"] }
anyhow = "1.0"
rand = "0.8.0"
ron = "0.6.2"
serde = {version = "1.0.63", features = ["derive"]}
derive_deref= "1.1.1"
itertools = "0.10.1"
typetag = "0.1.7"
bevy_spicy_networking = { git = "https://github.com/KuSpa/bevy_spicy_networking", branch="json"}
