[package]
name = "karthograph_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_spicy_networking = "0.6.0"
karthograph_core = {path = "../karthograph_core"}