[package]
name = "kartograph_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch="main", features = ["dynamic"] }
bevy_spicy_networking = { git = "https://github.com/KuSpa/bevy_spicy_networking", branch="json"}
kartograph_core = {path = "../kartograph_core"}
typetag = "0.1.7"
serde = {version = "1.0.63", features = ["derive"]}
derive_deref= "1.1.1"
itertools = "0.10.1"
rand = "0.8.4"
anyhow = "1.0.43"
ron = "0.6.2"